@@ -2,5 +2,5 @@
 AUTOMAKE_OPTIONS = foreign 1.2h
 
 # here are listed all the wxterminal files that go to the distribution
-EXTRA_DIST = gp_cairo.c gp_cairo.h gp_cairo_term.h wxt_gui.cpp wxt_gui.h \
+EXTRA_DIST = gp_cairo.c gp_cairo.h wxt_gui.cpp wxt_gui.h \
 	wxt_term.h bitmaps
